# vistagger

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  attributes.rs  floating.rs  images.rs  import_cmd.rs  mod.rs  settings.rs  tags.rs
src-tauri/src/db/: mod.rs  schema.rs
src/api/: tauri.ts
src/components/attributes/: AttributeBadge.tsx  AttributePanel.tsx
src/components/common/: ContextMenu.tsx  SearchBar.tsx
src/components/floating/: FloatControls.tsx  FloatingImage.tsx
src/components/import/: ImportDialog.tsx  ScreenshotButton.tsx
src/components/layout/: MainLayout.tsx  SettingsPage.tsx  Sidebar.tsx  Toolbar.tsx
src/components/tags/: AITagSuggestions.tsx  TagCategoryList.tsx  TagChip.tsx  TagPanel.tsx
src/hooks/: useAttributes.ts  useImages.ts  useTags.ts
src/stores/: attributeStore.ts  imageStore.ts  tagStore.ts  uiStore.ts
src/types/: index.ts
src/utils/: thumbnail.ts
